@@ -1,7 +1,7 @@
 #ifndef LX86_ARCH_BORDER_H
 #define LX86_ARCH_BORDER_H
 
-extern unsigned long htonl(unsigned long);
-extern unsigned long ntohl(unsigned long);
+extern unsigned long int htonl(unsigned long int);
+extern unsigned long int ntohl(unsigned long int);
 
 #endif
