@@ -32,6 +32,16 @@ Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001
 
 -------------------------------------------------------------------------------
 
+Sun May  5 17:22:53 BST 2002	Riley Williams <Riley@Williams.Name>
+
+	* Verified that fs/romfs/inode.c is now clean as far as
+	  `splint -weak` is concerned, fixing several bugs in the
+	  process, and also eliminating a fair chunk of redundant
+	  code (three static functions that were only called if
+	  BLOAT_FS was defined, but which were compiled in anyway).
+	* Verified that current codebase both compiles and boots on
+	  my 286 based laptop.
+
 Sun May  5 10:59:11 BST 2002	Riley Williams <Riley@Williams.Name>
 
 	* After much hassle and several false starts, reverted changes
